--- a/login.html
+++ b/login.html
@@ -1,5 +1,21 @@
-<form action="#" method="post">
-<label for="fname">First name: </label>
-<input type="text" name="name"><br><br>
-<input type="submit" value="Submit">
-</form> 
+<html>
+<body>	 
+	<form action = "#" method = "post">
+		
+
+<p>Enter Name:</p>
+
+
+		
+
+<p><input type = "text" name = "nm" /></p>
+
+
+		
+
+<p><input type = "submit" value = "submit" /></p>
+
+
+	</form>	 
+</body>
+</html>
